# my-blank-webapp

./: .pre-commit-config.yaml  Dockerfile  mypy.ini  pyproject.toml  requirements.txt
api/: router.py
app/: main.py
db/: async_db.py
migrations/: env.py
models/: base.py
settings/: __init__.py  settings.py
templates/: index.html
tests/test_settings/: test_settings.py
webapp/: router.py
