[tool.poetry]
name = "my-blank-webapp"
version = "0.1.0"
description = "A initial set-up for my web application projects."
authors = ["André Carvalho <alac1984@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "my_blank_webapp"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
